fix error style.css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2487,7 +2487,7 @@
         }
 
         .jss99 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2498,7 +2498,7 @@
         }
 
         .jss116 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2509,7 +2509,7 @@
         }
 
         .jss149 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2520,7 +2520,7 @@
         }
 
         .jss173 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2531,7 +2531,7 @@
         }
 
         .jss190 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2542,7 +2542,7 @@
         }
 
         .jss219 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2553,7 +2553,7 @@
         }
 
         .jss269 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
@@ -2564,7 +2564,7 @@
         }
 
         .jss272 {
-            background-color: ;
+            /* background-color: ; */
             display: block;
         }
 
