--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -44,3 +44,6 @@
     transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     border-radius: 50%;
 }
+.hiddenInformation{
+    visibility: hidden;
+}
