--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -47,3 +47,9 @@
 .hiddenInformation{
     visibility: hidden;
 }
+.hiddenSearch1{
+    visibility: hidden;
+}
+.showSearch1{
+    visibility: none;
+}
